--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,8 +2,10 @@
     "/js/app.js": "/js/app.js",
     "/css/h5/user.css": "/css/h5/user.css",
     "/css/app.css": "/css/app.css",
+    "/css/smart_basic.css": "/css/smart_basic.css",
     "/js/h5/student.js": "/js/h5/student.js",
     "/js/h5/teacher.js": "/js/h5/teacher.js",
+    "/js/smart_basic.js": "/js/smart_basic.js",
     "/css/extra_page.css": "/css/extra_page.css",
     "/js/extra_page.js": "/js/extra_page.js"
 }
